Pin gluetun version and move WG secrets to files

--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,13 @@
 VPN_SERVICE_PROVIDER=custom
 VPN_TYPE=wireguard
 
-# WireGuard Configuration - Replace with your VPN provider's values
-WIREGUARD_PRIVATE_KEY=YOUR_PRIVATE_KEY_HERE
+# WireGuard secret files (create these in volumes/gluetun/secrets)
+#   volumes/gluetun/secrets/wg_private_key      # contents: your WireGuard private key
+#   volumes/gluetun/secrets/wg_preshared_key    # contents: your WireGuard preshared key (or leave blank if none)
+
+# WireGuard Configuration (non-secret values go here; keys go in volumes/gluetun/secrets)
 WIREGUARD_ADDRESSES=10.x.x.x/32
 WIREGUARD_PUBLIC_KEY=YOUR_PUBLIC_KEY_HERE
-WIREGUARD_PRESHARED_KEY=YOUR_PRESHARED_KEY_HERE
 WIREGUARD_ENDPOINT_IP=x.x.x.x
 WIREGUARD_ENDPOINT_PORT=1234
 WIREGUARD_PERSISTENT_KEEPALIVE_INTERVAL=15s
