Disable gluetun DNS blocklists by default

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ KILL_SWITCH=on
 DNS_KEEP_NAMESERVER=off
 DOT=on
 DOT_PROVIDERS=cloudflare
-BLOCK_MALICIOUS=on
+BLOCK_MALICIOUS=off
 BLOCK_ADS=off
 
 # Firewall Configuration (allow VNC ports)
