--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,7 @@ services:
       - DISPLAY=:1
       - VNC_PASSWORD=${VNC_PASSWORD:-bisqvnc}
       - TZ=${TZ:-America/Sao_Paulo}
+      - JAVA_TOOL_OPTIONS=-Xmx3g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+ExitOnOutOfMemoryError
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
     restart: unless-stopped
