--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,7 @@ services:
       - VNC_PASSWORD=${VNC_PASSWORD:-bisqvnc}
       - TZ=${TZ:-America/Sao_Paulo}
       - JAVA_TOOL_OPTIONS=-Xmx3g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+ExitOnOutOfMemoryError
+      - NO_AT_BRIDGE=1
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
     restart: unless-stopped
