--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - VNC_PASSWORD=${VNC_PASSWORD:-bisqvnc}
       - TZ=${TZ:-America/Sao_Paulo}
       - JAVA_TOOL_OPTIONS=-Xmx3g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+ExitOnOutOfMemoryError
+      - NO_AT_BRIDGE=1
       # User/Group ID mapping (defaults to 1000:1000)
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
